syntax = "proto3";

option csharp_namespace = "GrpcService1"; 

import "google/protobuf/empty.proto";
package LuCat; //定义包名

//定义服务
service LuCat{
    //定义给猫洗澡双向流rpc
    rpc BathTheCat(stream BathTheCatReq) returns ( stream BathTheCatResp);
    //定义统计猫数量简单rpc
    rpc Count(google.protobuf.Empty) returns (CountCatResult);

    rpc Heartbeats(google.protobuf.Empty) returns (Heartbeat);
}

message SuckingCatResult{
    string message=1;
}
message BathTheCatReq{
    int32 id=1;
}
message BathTheCatResp{
    string message=1;
}
message CountCatResult{
    int32 Count=1;
}
message Heartbeat {
  enum Status {
    UNKNOWN = 0;
    OK = 1;
  }
  Status status = 1;
}
